# Tridjs-Live-Suite

./: .gitignore  CMakeLists.txt  README.md
Source/: AnalysisManager.cpp  AnalysisManager.h  AudioCore.cpp  AudioCore.h  DriveManager.cpp  DriveManager.h  FooterComponent.cpp  FooterComponent.h  FxRackComponent.cpp  FxRackComponent.h  HandFreeComponent.cpp  HandFreeComponent.h  HeaderComponent.cpp  HeaderComponent.h  InputManager.cpp  InputManager.h  LanguageManager.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainComponent_fixed.cpp  MixerComponent.h  PadComponent.cpp  PadComponent.h  PadsGridComponent.cpp  PadsGridComponent.h  PersistenceManager.h  PluginScannerManager.h  ResourceHelper.h  RgbManager.cpp  RgbManager.h  SerialManager.cpp  SerialManager.h  SideBrowserComponent.cpp  SideBrowserComponent.h  StemsComponent.cpp  StemsComponent.h  TrackBrowserComponent.cpp  TrackBrowserComponent.h  TrackDatabase.cpp  (+7 more)
Source/Controllers/: ControllerManagerWindow.h  ControllerSandboxWindow.h  MockAudioEngine.h
Source/Controllers/Core/: BaseController.h  ControllerEvent.h  ControllerProfile.h  ControllerRouter.h  MixxxMappingParser.h
Source/Controllers/Mappings/FLX10/: Pioneer-DDJ-FLX10-script.js  Pioneer-DDJ-FLX10.midi.xml
Source/Controllers/Mappings/Pioneer-DDJ-1000/: DDJ-1000.midi.xml  Pioneer-DDJ_1000-scripts.js
Source/Controllers/Mappings/Pioneer-DDJ-SB/: Pioneer-DDJ-SB.midi.xml
Source/Controllers/Professional/Mixxx/: MixxxJSEngine.h  MixxxMappingParser.h
lang/: Deutsch.xml  en-US.xml  es-ES.xml  fr-fr.xml  pt_br.xml
scratch/: fix_main.py
